--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.0.0",
     "express-session": "^1.0.4",
     "method-override": "~1.0.0",
+    "moment": "^2.8.3",
     "mongoose": "^3.8.18",
     "morgan": "^1.0.1",
     "passport": "~0.1.17",
