--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "body-parser": "^1.0.2",
     "connect-flash": "~0.1.1",
     "cookie-parser": "~1.0.0",
+    "debug": "^2.1.0",
     "ejs": "~0.8.5",
     "express": "^4.0.0",
     "express-session": "^1.0.4",
@@ -16,6 +17,7 @@
     "passport-facebook": "~1.0.2",
     "passport-google-oauth": "~0.1.5",
     "passport-local": "~0.1.6",
-    "passport-twitter": "~1.0.2"
+    "passport-twitter": "~1.0.2",
+    "send": "^0.10.1"
   }
 }
